src/objects/OrderApi__Renewal__c.object
<CustomObject>
    <description>Terms track the Subscription terms, dates for all Customer Subscriptions.</description>
    <fields>
        <fullName>OrderApi__Grace_Period_End_Date__c</fullName>
        <description>This date is calculated by the Term End Date plus the number of days defined on the Subscription Plan&apos;s Grace Period field.</description>
        <inlineHelpText>This date is calculated by the Term End Date plus the number of days defined on the Subscription Plan&apos;s Grace Period field.</inlineHelpText>
        <label>Grace Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the active subscription term.</description>
        <inlineHelpText>Defines the active subscription term.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Renewed_Date__c</fullName>
        <description>** System Calculated Required Override ** The date the customer renewed the Subscription.</description>
        <inlineHelpText>** System Calculated Required Override ** The date the customer renewed the Subscription.</inlineHelpText>
        <label>Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Related Sales Order Line(source).</description>
        <inlineHelpText>** System Calculated ** Related Sales Order Line(source).</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Related Sales Order (source).</description>
        <inlineHelpText>** System Calculated ** Related Sales Order (source).</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to related Subscription Plan</description>
        <inlineHelpText>** System Calculated ** Link to related Subscription Plan</inlineHelpText>
        <label>Subscription Plan</label>
        <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription__c</fullName>
        <description>** System Calculated Required ** Link to related Subscription</description>
        <inlineHelpText>** System Calculated Required ** Link to related Subscription</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrderApi__Term_End_Date__c</fullName>
        <description>** System Calculated Required Override ** The date the term ends.</description>
        <inlineHelpText>** System Calculated Required Override ** The date the term ends.</inlineHelpText>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Term_Start_Date__c</fullName>
        <description>** System Calculated Required Override ** The date the term begins.</description>
        <inlineHelpText>** System Calculated Required Override ** The date the term begins.</inlineHelpText>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <label>Term</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Term ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>